[package]
name = "esp32c3-hal"
version = "0.1.0"
authors = ["Robert Wiewel <dev@ducktec.de>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ducktec/esp32c3-hal"
description = "A Rust HAL for the ESP32-C3 SoC "
keywords = ["no-std", "esp32-c3", "riscv", "esp32", "bluetooth", "wifi", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3 = { git = "https://github.com/ducktec/esp32c3", branch = "feature_patches" }
riscv = "0.6.0"
nb = "0.1.2"
void = { version = "1.0", default-features = false }

[dev-dependencies]
esp32c-rt = "0.1.1"
panic-halt = "0.2"

[dependencies.embedded-hal]
version = "0.2.5"
features = ["unproven"]

[features]
default=[]

[workspace]
members = ["examples/*"]
